--- a/doctors.html
+++ b/doctors.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Corben:bold&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nobile&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="doctors.css">
 
 </head>
 <body>
