text update in index.html

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <section id="tailored-advice">
             <div class="container">
                 <h2>Tailored Advice</h2>
-                <p>Get personalized medical advice from our AI and doctors.</p>
+                <p>Get personalized medical advice from our doctors online.</p>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 AI Medical Advice</p>
+        <p>&copy; 2024 MediChat</p>
     </footer>
 </body>
 </html>
