--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="container">
-            <h1>AI Medical Advice</h1>
+            <h1>MediChat</h1>
             <nav>
                 <ul>
                     <li><a href="#signup">Sign Up</a></li>
