--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="ask-ai">
             <div class="container">
-                <h2>Ask AI</h2>
+                <h2>Ask the Medical Chatbot</h2>
                 <form>
                     <textarea name="question" placeholder="Enter your medical question here..."></textarea>
                     <button type="submit">Submit</button>
