added link to doctors

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <div class="container">
                 <h2>Tailored Advice</h2>
                 <p>Get personalized medical advice from our doctors online.</p>
+                <a class="btn" href="doctors.html">
+                    Book an Appointment
+                </a>
             </div>
         </section>
     </main>
