--- a/doctors.html
+++ b/doctors.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="#login">Log Out</a></li>
-                     <li><a href="#login">Ask AI-Chat</a></li>
+                     <li><a href="index.html">Ask AI-Chat</a></li>
                 </ul>
             </nav>
         </div>
