--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="#signup">Sign Up</a></li>
-                    <li><a href="#login">Log In</a></li>
+                    <li><a href="login.html">Log In</a></li>
                 </ul>
             </nav>
         </div>
