--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Corben:bold&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nobile&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:bold&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="MediChatstyle2.css">
 </head>
 <body>
