--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>MediChat</h1>
             <nav>
                 <ul>
-                    <li><a href="#signup">Sign Up</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
                     <li><a href="login.html">Log In</a></li>
                 </ul>
             </nav>
