--- a/doctors.html
+++ b/doctors.html
@@ -35,7 +35,7 @@
                 <li class="col-1-3">
                   <article class="card-testimonial">
                     <img
-                      src="images/img1.jpg"
+                      src="img1.jpg"
                       alt="GP"
                       width="100"
                       height="100"
@@ -52,7 +52,7 @@
                 <li class="col-1-3">
                   <article class="card-testimonial">
                     <img
-                      src="images/img2.jpg"
+                      src="img2.jpg"
                       alt="Doctor2"
                       width="100"
                       height="100"
@@ -86,7 +86,7 @@
                 <li class="col-1-3">
                   <article class="card-testimonial">
                     <img
-                      src="images/img4.jpg"
+                      src="img4.jpg"
                       alt="Doctor4"
                       width="100"
                       height="100"
